Implemented merchant view, refactored bot class, moved emojis to properties, added aspects for every turn actions, fixed collecting treasures, implemented effects calculations, added Expirable effects, refactoring and small fixes